--- a/The News Times/index.html
+++ b/The News Times/index.html
@@ -1,12 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>The News Times</title>
 </head>
+
 <body>
-    
+    <h1 class="title">The News Times</h1>
+
+    <div class="row first">
+        <div class="side section">
+            <h2>Student Learns HTML</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor orci felis, non tincidunt erat
+                dictum in. Maecenas felis felis, auctor a facilisis ut, molestie nec quam. Suspendisse potenti. Nulla
+                vestibulum viverra nulla sed pellentesque. Nullam aliquet luctus tellus, eget volutpat tortor ultricies
+                sit amet. Mauris sagittis commodo orci, at viverra ex tincidunt non.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. </p>
+        </div>
+        <div class="center section">
+            <h2>BREAKING: Puppies Are Adorable</h2>
+            <div class="image">
+                <img src="http://placecorgi.com/500/300" alt="Corgy" width="500" height="300">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor orci felis, non tincidunt erat
+                dictum in. Maecenas felis felis, auctor a facilisis ut, molestie nec quam. </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
+        </div>
+        <div class="side section">
+            <h2>CSS Is Apparently a Thing</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor orci felis, non tincidunt erat
+                dictum in. Maecenas felis felis, auctor a facilisis ut, molestie nec quam. Suspendisse potenti. Nulla
+                vestibulum viverra nulla sed pellentesque. Nullam aliquet luctus tellus, eget volutpat tortor ultricies
+                sit amet. Mauris sagittis commodo orci, at viverra ex tincidunt non.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. </p>
+        </div>
+    </div>
+
+    <div class="row second">
+        <div class="side section">
+            <h2>Boy Likes Turtles</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris auctor orci felis, non tincidunt erat
+                dictum in. Maecenas felis felis, auctor a facilisis ut, molestie nec quam. Suspendisse potenti. Nulla
+                vestibulum viverra nulla sed pellentesque. Nullam aliquet luctus tellus, eget volutpat tortor ultricies
+                sit amet. Mauris sagittis commodo orci, at viverra ex tincidunt non.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. </p>
+        </div>
+        <div class="colors section">
+            <p class="politics">Politics</p>
+            <p class="technology">Technology</p>
+            <p class="local">Local</p>
+            <p class="opinion">Opinion</p>
+            <p class="sports">Sports</p>
+        </div>
+    </div>
 </body>
+
 </html>
